--- a/ubuntuserver/grafana_configs/prometheus.yml
+++ b/ubuntuserver/grafana_configs/prometheus.yml
@@ -5,3 +5,13 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: "uptime"
+    scrape_interval: 30s
+    scheme: http
+    metrics_path: "/metrics"
+    static_configs:
+        - targets: ["uptime-kuma:3001"]
+    basic_auth:
+        username: kuma_username
+        password: kuma_password
