Update grafana configurations

--- a/ubuntuserver/coolify_composes/grafana.docker-compose.yml
+++ b/ubuntuserver/coolify_composes/grafana.docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - "9110:9090"
     volumes:
       - ~/grafana_configs/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -53,6 +55,18 @@ services:
       retries: 15
     ports:
       - "9200:3001"
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - "9130:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
   
 volumes:
   grafana-data:
