--- a/dots/proxmarkpizero2w/hostapd.conf
+++ b/dots/proxmarkpizero2w/hostapd.conf
@@ -8,17 +8,9 @@ ssid=peppermark
 channel=11
 hw_mode=g
 wpa_passphrase=GiggityGoo123
-interface=wlan0
+interface=uap0
 wpa=2
 wpa_pairwise=CCMP
 country_code=TW
-## Rapberry Pi 3 specific to on board WLAN/WiFi
 ieee80211n=1 # 802.11n support (Raspberry Pi 3)
 wmm_enabled=1 # QoS support (Raspberry Pi 3)
-# ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40] # (Raspberry Pi 3)
-
-## RaspAP wireless client AP mode
-#interface=uap0
-
-## RaspAP bridge AP mode, disabled by default
-#bridge=br0
